_sass/_syntax.scss
/* ==========================================================================
   Syntax highlighting
   ========================================================================== */

div.highlighter-rouge, figure.highlight {
  position: relative;
  margin-bottom: 1em;
  padding: 1em;
  border: 1px solid $border-color;
  border-radius: $border-radius;
  background-color: #f8f8f8;
  color: #000000; // $code-color-vin;
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
  box-shadow: $box-shadow;

  &:before {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0.5em;
    background-color: $lighter-gray;
    content: "\f121";
    //font-family: "fontawesome" !important;
    font-family: "Font Awesome 5 Free" !important;
    font-size: $type-size-6;
    line-height: 1;
    text-transform: none;
    speak: none;
  }

  .highlight {
    margin: 0;
    font-family: $monospace;
    font-size: $type-size-syntax;
    line-height: 1.8;
  }
}

.highlight table td { padding: 5px; }
.highlight table pre { margin: 0; }

/* Line-number table injected by custom.js */
table.code-linenos {
  width: 100%;
  border-collapse: collapse;
  font-family: $monospace;
  font-size: $type-size-syntax;
  line-height: 1.8;

  td.lineno {
    width: 2.5em;
    min-width: 2.5em;
    padding-right: 0.75em;
    text-align: right;
    color: #bbb;
    user-select: none;
    -webkit-user-select: none;
    border-right: 1px solid #e0e0e0;
    vertical-align: top;
    cursor: default;
  }

  td.code-line {
    padding-left: 1em;
    white-space: pre-wrap;
    overflow-wrap: break-word;
    vertical-align: top;
  }
}


/*
   GitHub theme (generated via `rougify style github`)
   ========================================================================== */

.highlight { background-color: #f8f8f8; }
.highlight .cm  { color: #999988; font-style: italic; }   /* Comment.Multiline */
.highlight .cp  { color: #999999; font-weight: bold; }    /* Comment.Preproc */
.highlight .c1  { color: #999988; font-style: italic; }   /* Comment.Single */
.highlight .cs  { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
.highlight .c,
.highlight .ch,
.highlight .cd,
.highlight .cpf { color: #999988; font-style: italic; }   /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2; } /* Error */
.highlight .gd  { color: #000000; background-color: #ffdddd; } /* Generic.Deleted */
.highlight .ge  { color: #000000; font-style: italic; }   /* Generic.Emph */
.highlight .gr  { color: #aa0000; }                        /* Generic.Error */
.highlight .gh  { color: #999999; }                        /* Generic.Heading */
.highlight .gi  { color: #000000; background-color: #ddffdd; } /* Generic.Inserted */
.highlight .go  { color: #888888; }                        /* Generic.Output */
.highlight .gp  { color: #555555; }                        /* Generic.Prompt */
.highlight .gs  { font-weight: bold; }                     /* Generic.Strong */
.highlight .gu  { color: #aaaaaa; }                        /* Generic.Subheading */
.highlight .gt  { color: #aa0000; }                        /* Generic.Traceback */
.highlight .kc  { color: #000000; font-weight: bold; }     /* Keyword.Constant */
.highlight .kd  { color: #000000; font-weight: bold; }     /* Keyword.Declaration */
.highlight .kn  { color: #000000; font-weight: bold; }     /* Keyword.Namespace */
.highlight .kp  { color: #000000; font-weight: bold; }     /* Keyword.Pseudo */
.highlight .kr  { color: #000000; font-weight: bold; }     /* Keyword.Reserved */
.highlight .kt  { color: #445588; font-weight: bold; }     /* Keyword.Type */
.highlight .k,
.highlight .kv  { color: #000000; font-weight: bold; }     /* Keyword */
.highlight .mf  { color: #009999; }                        /* Literal.Number.Float */
.highlight .mh  { color: #009999; }                        /* Literal.Number.Hex */
.highlight .il  { color: #009999; }                        /* Literal.Number.Integer.Long */
.highlight .mi  { color: #009999; }                        /* Literal.Number.Integer */
.highlight .mo  { color: #009999; }                        /* Literal.Number.Oct */
.highlight .m,
.highlight .mb,
.highlight .mx  { color: #009999; }                        /* Literal.Number */
.highlight .sa  { color: #000000; font-weight: bold; }     /* Literal.String.Affix */
.highlight .sb  { color: #d14; }                           /* Literal.String.Backtick */
.highlight .sc  { color: #d14; }                           /* Literal.String.Char */
.highlight .sd  { color: #d14; }                           /* Literal.String.Doc */
.highlight .s2  { color: #d14; }                           /* Literal.String.Double */
.highlight .se  { color: #d14; }                           /* Literal.String.Escape */
.highlight .sh  { color: #d14; }                           /* Literal.String.Heredoc */
.highlight .si  { color: #d14; }                           /* Literal.String.Interpol */
.highlight .sx  { color: #d14; }                           /* Literal.String.Other */
.highlight .sr  { color: #009926; }                        /* Literal.String.Regex */
.highlight .s1  { color: #d14; }                           /* Literal.String.Single */
.highlight .ss  { color: #990073; }                        /* Literal.String.Symbol */
.highlight .s,
.highlight .dl  { color: #d14; }                           /* Literal.String */
.highlight .na  { color: #008080; }                        /* Name.Attribute */
.highlight .bp  { color: #999999; }                        /* Name.Builtin.Pseudo */
.highlight .nb  { color: #0086B3; }                        /* Name.Builtin */
.highlight .nc  { color: #445588; font-weight: bold; }     /* Name.Class */
.highlight .no  { color: #008080; }                        /* Name.Constant */
.highlight .nd  { color: #3c5d5d; font-weight: bold; }     /* Name.Decorator */
.highlight .ni  { color: #800080; }                        /* Name.Entity */
.highlight .ne  { color: #990000; font-weight: bold; }     /* Name.Exception */
.highlight .nf,
.highlight .fm  { color: #990000; font-weight: bold; }     /* Name.Function */
.highlight .nl  { color: #990000; font-weight: bold; }     /* Name.Label */
.highlight .nn  { color: #555555; }                        /* Name.Namespace */
.highlight .nt  { color: #000080; }                        /* Name.Tag */
.highlight .vc  { color: #008080; }                        /* Name.Variable.Class */
.highlight .vg  { color: #008080; }                        /* Name.Variable.Global */
.highlight .vi  { color: #008080; }                        /* Name.Variable.Instance */
.highlight .nv,
.highlight .vm  { color: #008080; }                        /* Name.Variable */
.highlight .ow  { color: #000000; font-weight: bold; }     /* Operator.Word */
.highlight .o   { color: #000000; font-weight: bold; }     /* Operator */
.highlight .w   { color: #bbbbbb; }                        /* Text.Whitespace */

